# Soft-Robotic-Arm

./: .gitignore  .~lock.axial_120_seconds.csv#  .~lock.exp_099_axial_Nov24_14h33m.csv#  README.md  analyze_csv.py  analyze_csv_refined.py  axial_120_seconds_trial_2.csv  calibration.py  clean_data.py  data_analysis.py  exp_084_axial_Nov20_15h00m.csv  exp_089_axial_Nov24_11h48m.csv  exp_099_axial_Nov24_14h33m.csv  exp_105_axial_Nov25_13h11m.csv  experiment_sequence.md  inspect_leakage.py  leakage_compensation_prc.py  limit_cycle.py  main.py  pinns.py  plot_csv.py  prc.py  pyproject.toml  requirements.txt  test_control.py  test_leakage.py  test_logging.py
Evl_Arduino_adc/: Evl_Arduino_adc.ino
calibration_logs/: calibration_data.csv
docs/: Data Nomenclature.docx
experiments/: h5_to_csv.py  temp_experiment.h5
experiments_characterization/wave_sequences/: sine_0-10psi_0.5psi-s.csv  sine_0-10psi_1.0psi-s.csv  sine_0-3psi_0.5psi-s.csv  sine_0-3psi_1.0psi-s.csv  sine_0-4psi_0.5psi-s.csv  sine_0-4psi_1.0psi-s.csv  sine_0-5psi_0.5psi-s.csv  sine_0-5psi_1.0psi-s.csv  sine_0-6psi_0.5psi-s.csv  sine_0-6psi_1.0psi-s.csv  sine_0-7psi_0.5psi-s.csv  sine_0-7psi_1.0psi-s.csv  sine_0-8psi_0.5psi-s.csv  sine_0-8psi_1.0psi-s.csv  sine_0-9psi_0.5psi-s.csv  sine_0-9psi_1.0psi-s.csv  (+16 more)
experiments_triangular/: 0.0-5.0-pressure.csv
files_for_submission/: axial_120_seconds.csv  axial_data_120_seconds.csv
install/: local_setup.sh  setup.sh
log/: latest_build
utilities/: __init__.py  __main__.py  analysis.py  cleaner.py  config.py  leakage.py  plotting.py
(+7 files in other folders)
